Fixed Spacing

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 }
 
 #everything {
-    margin-top: 2%;
     text-align: center;
 }
 
@@ -31,7 +30,7 @@ input {
     padding-top: 10px;
     padding-bottom: 10px;
     max-width: 80%;
-    width: 500px;
+    width: 480px;
     font-family: 'Tahoma', sans-serif;
     font-size: 20px;
     text-indent: 15px;
@@ -66,7 +65,7 @@ p {
 
 #display {
     max-width: 80%;
-    width: 500px;
+    width: 480px;
     border-style: solid;
     border-color: white;
     border-radius: 10px;
@@ -92,10 +91,10 @@ p {
 }
 
 .guess {
-    margin-top: 10px;
+    margin-top: 8px;
     display: inline-block;
     max-width: 80%;
-    width: 500px;
+    width: 480px;
     border-style: solid;
     border-color: white;
     border-radius: 10px;
@@ -106,11 +105,15 @@ p {
     padding-left: 12px;
 }
 
+#guesses {
+    margin-bottom: 80px;
+}
+
 #bottom {
     background-color: #212121;
     width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     bottom: 0;
     position: fixed;
 }
